[tool.poetry]
name = "unime"
version = "0.1.0"
description = "A roomate matching app for brazilian college students"
authors = ["Igor Varejão <imsvarejao@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.34.0"
plotly = "^5.22.0"
scikit-learn = "^1.4.2"
openai = "^1.25.1"
transformers = "^4.40.1"
tiktoken = "^0.6.0"
opencv-python-headless = "^4.9.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
